Fix two step tuning to cv

--- a/module4/module4_slides.Rmd
+++ b/module4/module4_slides.Rmd
@@ -50,7 +50,7 @@ beta_step1 <- adaptive_lasso_fit(
   y = S[], # surrogate
   x = x[], # all X
   family = "gaussian",
-  tuning = "ic"
+  tuning = "cv"
 )
 ```
 
