--- a/module1/module1_slides.Rmd
+++ b/module1/module1_slides.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 
 # CAD data overview
 
-This data mart is a random sample of patients in the Mass General Brigham (formerly Partner's Healthcare) EHR database who had at least one note of 500 characters and met an initial filter for **coronary artery disease** (CAD) defined as: 
+The data mart is a random sample of patients in the Mass General Brigham (formerly Partner's Healthcare) EHR database who had at least one note of 500 characters and met an initial filter for **coronary artery disease** (CAD) defined as: 
     
 - $\geq$ 1 ICD9 code related to CAD (410.x, 411.x, 412.x, 413.x, 414.x). 
 - $\ge$ 1 mention for any CAD related concepts (eg. CAD, CAD procedures, CAD biomarkers, positive stress test).
@@ -69,8 +69,8 @@ head(ehr_data[, c(1:5, 25:30)])
 
 # Read in the CAD data
 
-“CODx” (n = 10): the counts of a specific code.
-“NLPx” (n = 574): the counts of a NLP term.
+“CODx” (n = 10): the counts of a specific code
+“NLPx” (n = 574): the counts of a positive mention of a CUI
 
 \tiny
 ```{r}
@@ -108,7 +108,7 @@ ehr_data[, feature_index] %>%
 
 - We log transform all the features as they are highly skewed
 
-- We orthogonalize all features against health care utilization before fitting as patients with higher healthcare utilization have higher feature counts (in Module 3)
+- We orthogonalize all features against health care utilization for Module 2
 
 (Please find more details in the `.Rmd` file.)
 
@@ -117,13 +117,19 @@ ehr_data[, feature_index] %>%
 features <- ehr_data[, c(3:ncol(ehr_data))]
 features <- log(features + 1)
 
+# Orthogonalize the features. 
+ other_features <- features[, -3]
+ # Orthogonalize. 
+ orthognalized_features <- qr.resid(qr(cbind(1, features$healthcare_utilization)), 
+                                   as.matrix(other_features))
+
 # Save the transformed features. 
 # Please note that in the beginning of module 2, the transformation is also performed.
 ehr_data_transformed <- cbind(
   patient_id = ehr_data$patient_id,
   label = ehr_data$label, 
   healthcare_utilization =features$healthcare_utilization, 
-  features
+  orthognalized_features
 ) 
 ```
 
