--- a/index.Rmd
+++ b/index.Rmd
@@ -7,8 +7,8 @@ author:
   url: https://sites.google.com/view/jgronsbell/home?authuser=0
   affiliation: University of Toronto
   affiliation_url: https://www.statistics.utoronto.ca/
-- name: Siyue Yang
 - name: Jianhui Gao
+- name: Siyue Yang
 date: June 5th, 2022
 site: distill::distill_website
 ---
@@ -28,6 +28,8 @@ knitr::opts_chunk$set(echo = FALSE)
 This website contains materials for Biostatistics Workshop at the [2022 SSC Annual Meeting Online](https://ssc.ca/en/meetings/annual/2022-annual-meeting). 
 
 In this workshop, we introduce methods for phenotyping with electronic health record (EHR) data.  Slides and code can be found for an example phenotyping problem below.
+
+- Electronic health records phenotyping [[Slides]()]
 
 - **Module 1** Introduction [[Slides](https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module1/module1_slides.pdf)] [[Rmd](https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module1/module1_slides.Rmd)]
 
